<resources>
    <string name="app_name">CafeOrder</string>
    <string name="logo_description">Логотип кафе.</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше имя</string>
    <string name="hint_password">Введите ваш пароль</string>
    <string name="button_create_order">Создать заказ</string>

    <string name="warning_fill_all_fields">Заполните все поля!</string>
    <string name="warning_fill_name">Имя не заполнено!</string>
    <string name="warning_fill_password">Пароль не заполнен!</string>
    <string name="hello_user">Привет, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лемон</string>
    <string name="chose_drink">Тип напитка</string>
    <string name="button_send_description">Кнопка отправить заказ</string>
    <string name="button_send_order">Отправить заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>

    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Зелёный</item>
        <item>Чёрный</item>
        <item>Красный</item>
    </string-array>
</resources>